data_processing done

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,3 +5,10 @@ stages:
     - src/data/data_ingestion.py
     outs:
     - data/interim
+  data_preprocessing:
+    cmd: python3 src/data/data_preprocessing.py
+    deps:
+    - data/interim
+    - src/data/data_preprocessing.py
+    outs:
+    - data/processed
